src/objects/Mercury_Opportunity__c.object
<CustomObject>
    <description>to hold the opportunity cant be synced back to salesforce</description>
    <fields>
        <fullName>Manual_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for manual checking</description>
        <label>Manual Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_on_Mismatch_analysis__c</fullName>
        <label>Notes on Mismatch analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mercury Mismatch Queue</relationshipLabel>
        <relationshipName>Mercury_Mismatch_Queue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>merc_admin__c</fullName>
        <label>merc admin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_apply_online_id__c</fullName>
        <label>merc apply online id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_branch__c</fullName>
        <label>merc branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_campagin__c</fullName>
        <label>merc campagin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_categories__c</fullName>
        <label>merc categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>merc_current_status__c</fullName>
        <label>merc current status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_deposit_due_date__c</fullName>
        <label>merc deposit due date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>merc_existing_amount__c</fullName>
        <label>merc existing amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>merc_finance_date__c</fullName>
        <label>merc finance date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>merc_first_sync_time__c</fullName>
        <label>merc first sync time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>merc_fixed_rate_expiry__c</fullName>
        <label>merc fixed rate expiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>merc_interest_only_expiry__c</fullName>
        <label>merc interest only expiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>merc_internal_reference__c</fullName>
        <label>merc internal reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_last_sync_time__c</fullName>
        <label>merc last sync time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>merc_lead_source__c</fullName>
        <label>merc lead source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_lender__c</fullName>
        <label>merc lender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_lender_reference__c</fullName>
        <label>merc lender reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_lmi__c</fullName>
        <label>merc lmi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>merc_loanPeople__c</fullName>
        <label>merc loan people</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>merc_loan_amount__c</fullName>
        <label>merc loan amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>merc_loan_value_ratio__c</fullName>
        <formula>merc_loan_amount__c / merc_security_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>merc loan value ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>merc_loan_writer__c</fullName>
        <label>merc loan writer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_opportunity_type__c</fullName>
        <label>merc opportunity type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_people__c</fullName>
        <label>merc people</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>merc_security_value__c</fullName>
        <label>merc security value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>merc_settlement_date__c</fullName>
        <label>merc settlement date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>merc_status_notes__c</fullName>
        <label>merc status notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>merc_supervisor__c</fullName>
        <label>merc supervisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_transaction_name__c</fullName>
        <label>merc transaction name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_transaction_type__c</fullName>
        <label>merc transaction type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>merc_uniqueId__c</fullName>
        <label>merc uniqueId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mercury Mismatch Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Manual_Check__c</columns>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>merc_uniqueId__c</columns>
        <columns>Notes_on_Mismatch_analysis__c</columns>
        <columns>merc_lead_source__c</columns>
        <columns>merc_transaction_name__c</columns>
        <columns>merc_current_status__c</columns>
        <columns>merc_loan_writer__c</columns>
        <columns>merc_loan_amount__c</columns>
        <columns>merc_first_sync_time__c</columns>
        <columns>merc_last_sync_time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Self_Gen_OLP</fullName>
        <columns>Manual_Check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>merc_first_sync_time__c</columns>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>Notes_on_Mismatch_analysis__c</columns>
        <columns>merc_current_status__c</columns>
        <columns>merc_transaction_name__c</columns>
        <columns>merc_lead_source__c</columns>
        <columns>merc_loan_writer__c</columns>
        <columns>merc_loan_amount__c</columns>
        <columns>merc_uniqueId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>merc_lead_source__c</field>
            <operation>notContain</operation>
            <value>self</value>
        </filters>
        <filters>
            <field>merc_lead_source__c</field>
            <operation>contains</operation>
            <value>acf online,click</value>
        </filters>
        <label>Non Self Gen OLP</label>
    </listViews>
    <listViews>
        <fullName>Non_Self_Gen_non_Commercial</fullName>
        <columns>Manual_Check__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>Notes_on_Mismatch_analysis__c</columns>
        <columns>merc_loan_writer__c</columns>
        <columns>merc_current_status__c</columns>
        <columns>merc_transaction_name__c</columns>
        <columns>merc_lead_source__c</columns>
        <columns>merc_uniqueId__c</columns>
        <columns>merc_loan_amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>merc_lead_source__c</field>
            <operation>notContain</operation>
            <value>self</value>
        </filters>
        <filters>
            <field>merc_loan_writer__c</field>
            <operation>notContain</operation>
            <value>,andrew jackson,Brent Wedesweiler</value>
        </filters>
        <label>Non Self Gen non Commercial</label>
    </listViews>
    <listViews>
        <fullName>Self_Gen</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>account__c</columns>
        <columns>Notes_on_Mismatch_analysis__c</columns>
        <columns>merc_current_status__c</columns>
        <columns>merc_transaction_name__c</columns>
        <columns>merc_lead_source__c</columns>
        <columns>merc_loan_writer__c</columns>
        <columns>merc_loan_amount__c</columns>
        <columns>merc_uniqueId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>merc_lead_source__c</field>
            <operation>contains</operation>
            <value>self</value>
        </filters>
        <label>Self Gen</label>
    </listViews>
    <nameField>
        <label>Mercury Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mercury Mismatch Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>